--- a/locale/cs_CZ/LC_MESSAGES/vendor.po
+++ b/locale/cs_CZ/LC_MESSAGES/vendor.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-20 12:29+0200\n"
-"PO-Revision-Date: 2017-11-23 23:51+0100\n"
+"POT-Creation-Date: 2019-10-20 17:58+0200\n"
+"PO-Revision-Date: 2019-10-20 18:20+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: \n"
 "Language: cs_CZ\n"
@@ -16,6 +16,30 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.8.7.1\n"
+
+#: ../vendor/atk14/decimal-field/src/app/fields/decimal_field.php:24
+msgid ""
+"Ensure this number has at most %max% digits (it has %digits% including "
+"allowed decimal places)."
+msgstr ""
+"Zajistěte, aby toto číslo mělo maximálně %max% číslic (teď má %digits% "
+"včetně povolených desetinných míst)."
+
+#: ../vendor/atk14/decimal-field/src/app/fields/decimal_field.php:25
+msgid ""
+"Ensure this number has at most %max% digits in integer-part (it has %integers"
+"%)."
+msgstr ""
+"Zajistěte, aby toto číslo mělo maximálně %max% číslic před desetinnou čárkou "
+"(teď má %integers%)."
+
+#: ../vendor/atk14/decimal-field/src/app/fields/decimal_field.php:26
+msgid ""
+"Ensure this number has at most %max% decimal places (it has %decimal_places"
+"%)."
+msgstr ""
+"Zajistěte, aby toto číslo mělo maximálně %max% desetinných míst (teď má "
+"%decimal_places%)."
 
 #: ../vendor/atk14/mail-panel/src/MailPanel.php:44
 msgid "Headers"
