--- a/locale/cs_CZ/LC_MESSAGES/vendor.po
+++ b/locale/cs_CZ/LC_MESSAGES/vendor.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-20 17:58+0200\n"
-"PO-Revision-Date: 2019-08-23 13:56+0200\n"
+"POT-Creation-Date: 2019-12-06 13:42+0100\n"
+"PO-Revision-Date: 2019-12-06 13:53+0100\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: \n"
 "Language: cs_CZ\n"
@@ -82,6 +82,49 @@ msgstr "Zobrazit obrázek"
 msgid "Unknown error"
 msgstr "Neznámá chyba"
 
+#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:11
+msgid ""
+"Please try to solve the test. It is important for us to be sure that we are "
+"communicating with a human."
+msgstr ""
+"Prosím, pokuste to vyřešit. Je pro nás důležité, abychom si byli jisti, že "
+"komunikujeme s člověkem."
+
+#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:12
+msgid "The test was not successful. Please try it again."
+msgstr "Test nebyl úspěšný. Zkuste to prosím znovu."
+
+#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:13
+msgid ""
+"We are experiencing some technical issue during the communication with "
+"Google. Please try it later."
+msgstr ""
+"Během komunikace se společností Google došlo k technickým problémům. Zkuste "
+"to prosím později."
+
+#: ../vendor/atk14/slug-field/src/slug_field.php:6
+msgid "Slug"
+msgstr "Slug"
+
+#: ../vendor/atk14/slug-field/src/slug_field.php:8
+msgid "funny-green-mug"
+msgstr "zabavny-zeleny-hrnek"
+
+#: ../vendor/atk14/slug-field/src/slug_field.php:12
+msgid "Write something like black-cat-white-cat"
+msgstr "Napište něco jako cerna-kocka-bily-kocour"
+
 #: ../vendor/atk14/url-field/src/url_field.php:12
 msgid "This doesn't look like an URL"
 msgstr "Toto nevypadá jako URL"
+
+#: ../vendor/atk14/zip-field/src/app/fields/zip_field.php:47
+#: ../vendor/atk14/zip-field/test/tc_zip_field.php:50
+msgid "Please enter a valid zip code"
+msgstr "Zadejte prosím platné PSČ"
+
+#: ../vendor/atk14/zip-field/src/app/fields/zip_field.php:86
+#: ../vendor/atk14/zip-field/src/app/fields/zip_field.php:87
+#: ../vendor/atk14/zip-field/test/tc_zip_field.php:60
+msgid "Enter the ZIP code as NNN NN"
+msgstr "Zadejte PSČ ve formátu NNN NN"
