--- a/locale/cs_CZ/LC_MESSAGES/application.po
+++ b/locale/cs_CZ/LC_MESSAGES/application.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 15:20+0100\n"
-"PO-Revision-Date: 2019-12-11 15:21+0100\n"
+"POT-Creation-Date: 2020-01-30 13:12+0100\n"
+"PO-Revision-Date: 2020-01-30 13:22+0100\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: cs_CZ\n"
@@ -158,7 +158,7 @@ msgstr "Opravdu chcete odstranit tento slevový kupón z nákupního košíku?"
 msgid "Doprava"
 msgstr "Doprava"
 
-#: ../app/widgets/select_with_images.php:125
+#: ../app/widgets/select_with_images.php:131
 msgid "Zdarma"
 msgstr "Zdarma"
 
@@ -227,9 +227,6 @@ msgstr "Produkty"
 
 msgid "No product has been found."
 msgstr "Žádný produkt nebyl nalezen."
-
-msgid "products in total"
-msgstr "produktů celkem"
 
 msgid "Fakturační údaje"
 msgstr "Fakturační údaje"
@@ -411,6 +408,9 @@ msgstr "Platba:"
 msgid "Celkem k úhradě"
 msgstr "Celkem k úhradě"
 
+msgid "Uvedená konečná cena neobsahuje poplatek za dopravu."
+msgstr "Uvedená konečná cena neobsahuje poplatek za dopravu."
+
 msgid "Přeprava"
 msgstr "Přeprava"
 
@@ -561,17 +561,17 @@ msgstr "Děkujeme za nákup v obchodě %1!"
 msgid "děkujeme za nákup v obchodě %1!"
 msgstr "děkujeme za nákup v obchodě %1!"
 
-msgid "Navštivte náš showroom v&nbsp;Praze&nbsp;4"
-msgstr "Navštivte náš showroom v&nbsp;Praze&nbsp;4"
+msgid "Navštivte naši novou prodejnu"
+msgstr "Navštivte naši novou prodejnu"
 
 msgid "Aktuality"
 msgstr "Aktuality"
 
-msgid "Historie a detaily mých objednávek"
-msgstr "Historie a detaily mých objednávek"
-
 msgid "Objednávka vytvořena: %1"
 msgstr "Objednávka vytvořena: %1"
+
+msgid "Stav objednávky:"
+msgstr "Stav objednávky:"
 
 msgid "Stav platby: %1"
 msgstr "Stav platby: %1"
@@ -588,14 +588,20 @@ msgstr "Pochlubte se přátelům s Vaším nákupem."
 msgid "Sdílet"
 msgstr "Sdílet"
 
+msgid "Historie a detaily mých objednávek"
+msgstr "Historie a detaily mých objednávek"
+
 msgid "Číslo objednávky"
 msgstr "Číslo objednávky"
 
-msgid "Datum"
-msgstr "Datum"
-
 msgid "Cena"
 msgstr "Cena"
+
+msgid "Datum vytvoření"
+msgstr "Datum vytvoření"
+
+msgid "Stav"
+msgstr "Stav"
 
 msgid "Faktura"
 msgstr "Faktura"
@@ -656,6 +662,21 @@ msgstr "upravit"
 msgid "smazat"
 msgstr "smazat"
 
+msgid "Vybráno:"
+msgstr "Vybráno:"
+
+msgid "odstranit toto omezení výběru"
+msgstr "odstranit toto omezení výběru"
+
+msgid "Odstranit všechny filtry"
+msgstr "Odstranit všechny filtry"
+
+msgid "Filtrace produktů"
+msgstr "Filtrace produktů"
+
+msgid "Rozšířené vyhledávání"
+msgstr "Rozšířené vyhledávání"
+
 msgid "The following difficulties have occurred during the form processing:"
 msgstr "Během zpracování formuláře došlo k následujícím chybám:"
 
@@ -706,7 +727,7 @@ msgid "Create new object"
 msgstr "Vytvořit nový objekt"
 
 msgid "Objects administration"
-msgstr "Administrace objektů"
+msgstr "Správa objektů"
 
 msgid "Edit links"
 msgstr "Editovat odkazy"
@@ -838,6 +859,9 @@ msgstr "IČ:"
 msgid "DIČ:"
 msgstr "DIČ:"
 
+msgid "Výběru odpovídá:"
+msgstr "Výběru odpovídá:"
+
 msgid "Photo gallery"
 msgstr "Fotogalerie"
 
@@ -914,7 +938,11 @@ msgstr "Produktové kategorie"
 msgid "Brands"
 msgstr "Značky"
 
-#: ../app/controllers/users_controller.php:17
+#: ../app/controllers/stores_controller.php:14
+msgid "Stores"
+msgstr "Prodejny"
+
+#: ../app/controllers/users_controller.php:18
 msgid "New user registration"
 msgstr "Registrace nového uživatele"
 
@@ -982,6 +1010,23 @@ msgstr "Informace o&nbsp;prodejně"
 msgid "Ukázat na&nbsp;mapě"
 msgstr "Ukázat na&nbsp;mapě"
 
+msgid ""
+"You have been successfully registered and now you are logged in as <em>%1</"
+"em>."
+msgstr ""
+"Byl(a) jste úspěšně zaregistrován(a) a teď jste přihlášen(a) jako <em>%1</"
+"em>."
+
+msgid "Now you can <a href=\"%1\">go to the homepage</a> and enjoy our eshop."
+msgstr ""
+"Nyní můžete přejít na <a href=\"%1\">úvodní stránku</a> a užít si náš e-shop."
+
+msgid "You have been successfully registered."
+msgstr "Byl(a) jste úspěšně zaregistrován(a)."
+
+msgid "Now you can <a href=\"%1\">sign in</a> and enjoy our eshop."
+msgstr "Nyní se můžete <a href=\"%1\">přihlásit</a> a užít si náš e-shop."
+
 #: ../app/forms/users/create_new_form.php:6
 msgid "Username (login)"
 msgstr "Uživatelské jméno (login)"
@@ -1002,11 +1047,11 @@ msgstr "Jste administrátor?"
 msgid "Yes, you are"
 msgstr "Ano, jste"
 
-#: ../app/controllers/users_controller.php:40
+#: ../app/controllers/users_controller.php:44
 msgid "Change your account data"
 msgstr "Změnit vaše údaje"
 
-#: ../app/controllers/users_controller.php:57
+#: ../app/controllers/users_controller.php:61
 msgid "Change your password"
 msgstr "Změna vašeho hesla"
 
@@ -1024,56 +1069,57 @@ msgstr "Špatné heslo"
 msgid "There is no such user"
 msgstr "Takový uživatel tady není"
 
-#: ../app/controllers/application_base.php:49
+#: ../app/controllers/application_base.php:55
 msgid "Page not found"
 msgstr "Stránka nebyla nalezena"
 
-#: ../app/controllers/application_base.php:63
+#: ../app/controllers/application_base.php:69
 msgid "Forbidden"
 msgstr "Zakázáno"
 
-#: ../app/controllers/application_base.php:176
+#: ../app/controllers/application_base.php:183
 msgid "Home"
 msgstr "Domů"
 
-#: ../app/controllers/application_mailer.php:98
+#: ../app/controllers/application_mailer.php:104
 msgid "New registration"
 msgstr "Nová registrace"
 
-#: ../app/controllers/application_mailer.php:107
+#: ../app/controllers/application_mailer.php:113
 msgid "Reset Your Password"
 msgstr "Obnova vašeho hesla"
 
-#: ../app/controllers/application_mailer.php:116
+#: ../app/controllers/application_mailer.php:122
 msgid "Your password was updated"
 msgstr "Vaše heslo bylo změněno"
 
-#: ../app/controllers/application_mailer.php:127
+#: ../app/controllers/application_mailer.php:133
 #, php-format
 msgid "Order %d"
 msgstr "Objednávka %d"
 
-#: ../app/controllers/application_mailer.php:147
+#: ../app/controllers/application_mailer.php:153
 #: ../app/controllers/application.php:78
 #: ../app/controllers/orders_controller.php:18
 #, php-format
 msgid "Objednávka %s"
 msgstr "Objednávka %s"
 
-#: ../app/controllers/application_mailer.php:164
+#: ../app/controllers/application_mailer.php:170
 msgid "Message sent from contact page"
 msgstr "Zpráva zaslaná z kontaktní stránky"
 
-#: ../app/controllers/application_mailer.php:175
-#: ../app/controllers/application_mailer.php:184
+#: ../app/controllers/application_mailer.php:181
+#: ../app/controllers/application_mailer.php:190
 #: ../app/controllers/information_requests_controller.php:5
 #: ../app/controllers/information_requests_controller.php:29
 msgid "Request for information"
 msgstr "Žádost o informaci"
 
-#: ../app/controllers/application.php:55
-msgid "My account"
-msgstr "Můj účet"
+#: ../app/controllers/application.php:45
+#: ../app/controllers/users_controller.php:5
+msgid "User profile"
+msgstr "Profil uživatele"
 
 #: ../app/controllers/application.php:68
 msgid "Objednávky"
@@ -1149,12 +1195,16 @@ msgstr "Slevový kupón byl odebrán"
 msgid "List of Brands"
 msgstr "Seznam značek"
 
-#: ../app/controllers/categories_controller.php:13
+#: ../app/controllers/card_list_controller.php:64
+#, php-format
+msgid "Zpět do %s"
+msgstr "Zpět do %s"
+
+#: ../app/controllers/categories_controller.php:14
 msgid "List of Categories"
 msgstr "Seznam kategorií"
 
-#: ../app/controllers/categories_controller.php:14
-#: ../app/controllers/categories_controller.php:46
+#: ../app/controllers/categories_controller.php:15
 msgid "Categories"
 msgstr "Kategorie"
 
@@ -1294,7 +1344,7 @@ msgstr ""
 "nastavena."
 
 #: ../app/controllers/password_recoveries_controller.php:62
-#: ../app/controllers/users_controller.php:71
+#: ../app/controllers/users_controller.php:75
 msgid "Your password has been updated successfully"
 msgstr "Vaše heslo bylo úspěšně změněno"
 
@@ -1315,34 +1365,31 @@ msgstr "Mapa stránek"
 msgid "List of stores"
 msgstr "Seznam prodejen"
 
-#: ../app/controllers/stores_controller.php:14
-msgid "Stores"
-msgstr "Prodejny"
-
-#: ../app/controllers/users_controller.php:4
-msgid "User profile"
-msgstr "Profil uživatele"
-
-#: ../app/controllers/users_controller.php:9
+#: ../app/controllers/users_controller.php:10
 msgid "To register as a new user, sign out first"
 msgstr "Abyste se mohl zaregistrovat, napřed se odhlaste"
 
-#: ../app/controllers/users_controller.php:29
+#: ../app/controllers/users_controller.php:31
 #, php-format
 msgid ""
 "You have been successfully registered and now you are logged in as <em>%s</"
 "em>"
-msgstr "Byl jste úspěšně zaregistrován a teď jste přihlášen jako <em>%s</em>"
+msgstr ""
+"Byl(a) jste úspěšně zaregistrován(a) a teď jste přihlášen(a) jako <em>%s</em>"
 
-#: ../app/controllers/users_controller.php:46
+#: ../app/controllers/users_controller.php:40
+msgid "Thank you for your registration!"
+msgstr "Děkujeme za vaši registraci!"
+
+#: ../app/controllers/users_controller.php:50
 msgid "Nothing has been changed"
 msgstr "Nic nebylo změněno"
 
-#: ../app/controllers/users_controller.php:51
+#: ../app/controllers/users_controller.php:55
 msgid "Your account data has been updated"
 msgstr "Údaje vašeho účtu byly změněny"
 
-#: ../app/controllers/users_controller.php:61
+#: ../app/controllers/users_controller.php:65
 msgid "This is not your current password"
 msgstr "Toto neni vaše aktuální heslo"
 
@@ -1395,7 +1442,7 @@ msgstr "kolekce"
 msgid "There is no such collection"
 msgstr "Taková kolekce neexistuje"
 
-#: ../app/fields/delivery_method_at_checkout_field.php:89
+#: ../app/fields/delivery_method_at_checkout_field.php:96
 #, php-format
 msgid "od %s do %s dle země doručení"
 msgstr "od %s do %s dle země doručení"
@@ -1461,11 +1508,11 @@ msgstr "Zadaný počet musí být dělitelný číslem %d"
 msgid "stav objednávky"
 msgstr "stav objednávky"
 
-#: ../app/fields/page_field.php:4
+#: ../app/fields/page_field.php:5
 msgid "page"
 msgstr "stránka"
 
-#: ../app/fields/page_field.php:32
+#: ../app/fields/page_field.php:29
 msgid "There is no such page"
 msgstr "Takový stránka neexistuje"
 
@@ -1675,6 +1722,11 @@ msgstr "Uložit adresu"
 msgid "Uložit změny"
 msgstr "Uložit změny"
 
+#: ../app/forms/filter_form.php:8
+#: ../lib/filter/copy/app/forms/filter_form.php:8
+msgid "Filtrovat"
+msgstr "Filtrovat"
+
 #: ../app/forms/logins/create_new_form.php:8
 msgid "Login"
 msgstr "Přihlásit se"
@@ -1764,86 +1816,86 @@ msgstr "Video"
 msgid "Galerie"
 msgstr "Galerie"
 
-#: ../app/models/basket.php:551
+#: ../app/models/basket.php:555
 msgid "Košík je prázdný"
 msgstr "Košík je prázdný"
 
-#: ../app/models/basket.php:561
+#: ../app/models/basket.php:565
 #, php-format
 msgid "Produkt <em>%s (%s)</em> byl vyřazen z našeho ceníku"
 msgstr "Produkt <em>%s (%s)</em> byl vyřazen z našeho ceníku"
 
-#: ../app/models/basket.php:563 ../app/models/basket.php:578
+#: ../app/models/basket.php:567 ../app/models/basket.php:582
 msgid "odebrat z košíku"
 msgstr "odebrat z košíku"
 
-#: ../app/models/basket.php:576
+#: ../app/models/basket.php:580
 #, php-format
 msgid "Produkt <em>%s (%s)</em> není skladem"
 msgstr "Produkt <em>%s (%s)</em> není skladem"
 
-#: ../app/models/basket.php:586
+#: ../app/models/basket.php:590
 #, php-format
 msgid "Produkt <em>%s (%s)</em> lze objednat v počtu nejvýše: %s"
 msgstr "Produkt <em>%s (%s)</em> lze objednat v počtu nejvýše: %s"
 
-#: ../app/models/basket.php:588 ../app/models/basket.php:598
-#: ../app/models/basket.php:609
+#: ../app/models/basket.php:592 ../app/models/basket.php:602
+#: ../app/models/basket.php:613
 #, php-format
 msgid "změnit množství na %s"
 msgstr "změnit množství na %s"
 
-#: ../app/models/basket.php:596
+#: ../app/models/basket.php:600
 #, php-format
 msgid "Produkt <em>%s (%s)</em> lze objednat v počtu nejméně: %s"
 msgstr "Produkt <em>%s (%s)</em> lze objednat v počtu nejméně: %s"
 
-#: ../app/models/basket.php:607
+#: ../app/models/basket.php:611
 #, php-format
 msgid "Množství u produktu <em>%s (%s)</em> musí být násobkem čísla %s"
 msgstr "Množství u produktu <em>%s (%s)</em> musí být násobkem čísla %s"
 
-#: ../app/models/basket.php:621
+#: ../app/models/basket.php:625
 #, php-format
 msgid "odstranit voucher"
 msgstr "odstranit voucher"
 
-#: ../app/models/basket.php:629
+#: ../app/models/basket.php:633
 msgid "Celková cena nesmí být záporná. Přihoďte do košíku ještě něco malého :)"
 msgstr ""
 "Celková cena nesmí být záporná. Přihoďte do košíku ještě něco malého :)"
 
-#: ../app/models/basket.php:630 ../app/models/basket.php:636
+#: ../app/models/basket.php:634 ../app/models/basket.php:640
 #, php-format
 msgid "přejít do katalogu"
 msgstr "přejít do katalogu"
 
-#: ../app/models/basket.php:635
+#: ../app/models/basket.php:639
 #, php-format
 msgid ""
 "Celková cena musí být alespoň %s. Přihoďte do košíku ještě něco malého :)"
 msgstr ""
 "Celková cena musí být alespoň %s. Přihoďte do košíku ještě něco malého :)"
 
-#: ../app/models/basket.php:642
+#: ../app/models/basket.php:646
 msgid "Musí být vybrána online platební metoda"
 msgstr "Musí být vybrána online platební metoda"
 
-#: ../app/models/basket.php:648
+#: ../app/models/basket.php:652
 #, php-format
 msgid "Doručovací metoda <em>%s</em> nemůže být vybrána"
 msgstr "Doručovací metoda <em>%s</em> nemůže být vybrána"
 
-#: ../app/models/basket.php:654
+#: ../app/models/basket.php:658
 #, php-format
 msgid "Pro způsob dodání '%s' nebylo zvoleno doručovací místo"
 msgstr "Pro způsob dodání '%s' nebylo zvoleno doručovací místo"
 
-#: ../app/models/basket.php:658
+#: ../app/models/basket.php:662
 msgid "Objednávku nelze doručit na danou doručovací adresu"
 msgstr "Objednávku nelze doručit na danou doručovací adresu"
 
-#: ../app/models/basket.php:659
+#: ../app/models/basket.php:663
 msgid "upravte doručovací adresu"
 msgstr "upravte doručovací adresu"
 
@@ -1926,23 +1978,117 @@ msgstr "Sniž objednané množství"
 msgid "Zvyš objednané množství"
 msgstr "Zvyš objednané množství"
 
-#~ msgid "Popis"
-#~ msgstr "Popis"
+#: ../lib/ajax_pager/ajax_pager.php:57
+msgid "Seřadit dle"
+msgstr "Seřadit dle"
 
-#~ msgid "...za Váš nákup, vraťte se brzy :)"
-#~ msgstr "...za Váš nákup, vraťte se brzy :)"
+#: ../lib/ajax_pager/ajax_pager.php:62
+msgid "První strana"
+msgstr "První strana"
 
-#~ msgid "more information"
-#~ msgstr "více informací"
+#: ../lib/ajax_pager/ajax_pager.php:63
+msgid "Další produkt"
+msgstr "Další produkt"
 
-#~ msgid "PSČ zadejte ve tvaru 123 45"
-#~ msgstr "PSČ zadejte ve tvaru 123 45"
+#: ../lib/ajax_pager/ajax_pager.php:64 ../lib/ajax_pager/ajax_pager.php:67
+msgid "Další strana"
+msgstr "Další strana"
 
-#~ msgid "Request URL:"
-#~ msgstr "Adresa URL požadavku:"
+#: ../lib/ajax_pager/ajax_pager.php:65
+#, php-format
+msgid "Další %s produkty"
+msgstr "Další %s produkty"
 
-#~ msgid "Price: %1 <span class=\"dph\">incl. VAT</span>"
-#~ msgstr "Cena: %1 <span class=\"dph\">včetně DPH</span>"
+#: ../lib/ajax_pager/ajax_pager.php:66
+#, php-format
+msgid "Dalších %s produktů"
+msgstr "Dalších %s produktů"
+
+#: ../lib/ajax_pager/ajax_pager.php:68
+msgid "Předchozí strana"
+msgstr "Předchozí strana"
+
+#: ../lib/ajax_pager/ajax_pager.php:69
+msgid "Zbývá 1 položka z %t"
+msgstr "Zbývá 1 položka z %t"
+
+#: ../lib/ajax_pager/ajax_pager.php:70
+msgid "Zbývají %s položky z %t"
+msgstr "Zbývají %s položky z %t"
+
+#: ../lib/ajax_pager/ajax_pager.php:71
+msgid "Zbývá %s položek z %t"
+msgstr "Zbývá %s položek z %t"
+
+#: ../lib/ajax_pager/ajax_pager.php:75
+msgid "Vyhledáno celkem %t produktů"
+msgstr "Vyhledáno celkem %t produktů"
+
+#: ../lib/ajax_pager/ajax_pager.php:77 ../lib/ajax_pager/ajax_pager.php:80
+msgid "produktů"
+msgstr "produktů"
+
+#: ../lib/ajax_pager/ajax_pager.php:78
+msgid "produkt"
+msgstr "produkt"
+
+#: ../lib/ajax_pager/ajax_pager.php:79
+msgid "produkty"
+msgstr "produkty"
+
+#: ../lib/ajax_pager/ajax_pager.php:82
+msgid "Načítám..."
+msgstr "Načítám..."
+
+#: ../lib/filter/filter_bool_section.php:21
+msgid "Vše"
+msgstr "Vše"
+
+#: ../lib/filter/filter_bool_section.php:22
+msgid "Ano"
+msgstr "Ano"
+
+#: ../lib/filter/filter_bool_section.php:23
+msgid "Ne"
+msgstr "Ne"
+
+#: ../lib/filter/filter_range_section.php:231
+msgid "from"
+msgstr "od"
+
+#: ../lib/filter/filter_range_section.php:235
+msgid "to"
+msgstr "do"
+
+msgid "products in total"
+msgstr "produktů celkem"
+
+msgid "Navštivte náš showroom v&nbsp;Praze&nbsp;4"
+msgstr "Navštivte náš showroom v&nbsp;Praze&nbsp;4"
+
+msgid "Datum"
+msgstr "Datum"
+
+msgid "My account"
+msgstr "Můj účet"
+
+msgid "Popis"
+msgstr "Popis"
+
+msgid "...za Váš nákup, vraťte se brzy :)"
+msgstr "...za Váš nákup, vraťte se brzy :)"
+
+msgid "more information"
+msgstr "více informací"
+
+msgid "PSČ zadejte ve tvaru 123 45"
+msgstr "PSČ zadejte ve tvaru 123 45"
+
+msgid "Request URL:"
+msgstr "Adresa URL požadavku:"
+
+msgid "Price: %1 <span class=\"dph\">incl. VAT</span>"
+msgstr "Cena: %1 <span class=\"dph\">včetně DPH</span>"
 
 #~ msgid "Please, write us to %1 if you think this is our mistake."
 #~ msgstr "Napište nám na adresu %1, pokud si myslíte, že je to naše chyba."
@@ -3781,3 +3927,11 @@ msgstr "Zvyš objednané množství"
 
 #~ msgid "Variant"
 #~ msgstr "Varianta"
+
+#~ msgid ""
+#~ "Now you can <a href=\"%1\">go to the homepage</a> and enjoy our website."
+#~ msgstr ""
+#~ "Nyní můžete přejít <a href=\"%1\">na úvodní stránku</a> a užít si náš web."
+
+#~ msgid "Now you can <a href=\"%1\">sign in</a> and enjoy our website."
+#~ msgstr "Nyní se můžete <a href=\"%1\">přihlásit</a> a užít si náš web."
