--- a/locale/en_US/LC_MESSAGES/vendor.po
+++ b/locale/en_US/LC_MESSAGES/vendor.po
@@ -3,61 +3,122 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-05 12:10+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2020-01-30 13:12+0100\n"
+"PO-Revision-Date: 2020-01-30 12:25+0100\n"
+"Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
+"Language-Team: \n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.8.7.1\n"
+
+#: ../vendor/atk14/decimal-field/src/app/fields/decimal_field.php:24
+msgid ""
+"Ensure this number has at most %max% digits (it has %digits% including "
+"allowed decimal places)."
+msgstr ""
+
+#: ../vendor/atk14/decimal-field/src/app/fields/decimal_field.php:25
+msgid ""
+"Ensure this number has at most %max% digits in integer-part (it has %integers"
+"%)."
+msgstr ""
+
+#: ../vendor/atk14/decimal-field/src/app/fields/decimal_field.php:26
+msgid ""
+"Ensure this number has at most %max% decimal places (it has %decimal_places"
+"%)."
+msgstr ""
 
 #: ../vendor/atk14/mail-panel/src/MailPanel.php:44
 msgid "Headers"
-msgstr ""
+msgstr "Headers"
 
 #: ../vendor/atk14/mail-panel/src/MailPanel.php:55
 msgid "HTML body"
-msgstr ""
+msgstr "HTML body"
 
 #: ../vendor/atk14/mail-panel/src/MailPanel.php:61
 msgid "Plain text body"
-msgstr ""
+msgstr "Plain text body"
 
 #: ../vendor/atk14/mail-panel/src/MailPanel.php:71
 msgid "No mail has been sent"
-msgstr ""
+msgstr "No mail has been sent"
 
 #: ../vendor/atk14/phone-field/src/phone_field.php:5
 msgid "Enter valid phone number (+420.605123456)"
-msgstr ""
+msgstr "Enter valid phone number (+420.605123456)"
 
 #: ../vendor/atk14/phone-field/src/phone_field.php:7
 msgid "Enter phone number in format +420.605123456"
-msgstr ""
+msgstr "Enter phone number in format +420.605123456"
 
-#: ../vendor/atk14/pupiq-client/src/app/widgets/pupiq_attachment_input.php:31
-#: ../vendor/atk14/pupiq-client/src/app/widgets/pupiq_image_input.php:35
+#: ../vendor/atk14/pupiq-client/src/app/widgets/pupiq_attachment_input.php:41
+#: ../vendor/atk14/pupiq-client/src/app/widgets/pupiq_image_input.php:45
 msgid "remove"
-msgstr ""
+msgstr "remove"
 
-#: ../vendor/atk14/pupiq-client/src/app/widgets/pupiq_attachment_input.php:32
+#: ../vendor/atk14/pupiq-client/src/app/widgets/pupiq_attachment_input.php:42
 msgid "Download attachment"
-msgstr ""
+msgstr "Download attachment"
 
-#: ../vendor/atk14/pupiq-client/src/app/widgets/pupiq_image_input.php:36
+#: ../vendor/atk14/pupiq-client/src/app/widgets/pupiq_image_input.php:46
 msgid "Display image"
-msgstr ""
+msgstr "Display image"
 
-#: ../vendor/atk14/pupiq-client/src/lib/pupiq.php:81
+#: ../vendor/atk14/pupiq-client/src/lib/pupiq.php:95
 msgid "Unknown error"
+msgstr "Unknown error"
+
+#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:11
+msgid ""
+"Please try to solve the test. It is important for us to be sure that we are "
+"communicating with a human."
 msgstr ""
+"Please try to solve the test. It is important for us to be sure that we are "
+"communicating with a human."
+
+#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:12
+msgid "The test was not successful. Please try it again."
+msgstr "The test was not successful. Please try it again."
+
+#: ../vendor/atk14/recaptcha-field/src/app/fields/recaptcha_field.php:13
+msgid ""
+"We are experiencing some technical issue during the communication with "
+"Google. Please try it later."
+msgstr ""
+"We are experiencing some technical issue during the communication with "
+"Google. Please try it later."
+
+#: ../vendor/atk14/slug-field/src/slug_field.php:6
+msgid "Slug"
+msgstr "Slug"
+
+#: ../vendor/atk14/slug-field/src/slug_field.php:8
+msgid "funny-green-mug"
+msgstr "funny-green-mug"
+
+#: ../vendor/atk14/slug-field/src/slug_field.php:12
+msgid "Write something like black-cat-white-cat"
+msgstr "Write something like black-cat-white-cat"
 
 #: ../vendor/atk14/url-field/src/url_field.php:12
 msgid "This doesn't look like an URL"
+msgstr "This doesn't look like an URL"
+
+#: ../vendor/atk14/zip-field/src/app/fields/zip_field.php:47
+#: ../vendor/atk14/zip-field/test/tc_zip_field.php:50
+msgid "Please enter a valid zip code"
+msgstr ""
+
+#: ../vendor/atk14/zip-field/src/app/fields/zip_field.php:86
+#: ../vendor/atk14/zip-field/src/app/fields/zip_field.php:87
+#: ../vendor/atk14/zip-field/test/tc_zip_field.php:60
+msgid "Enter the ZIP code as NNN NN"
 msgstr ""
