[Gettext] Czech messages

--- a/locale/cs_CZ/LC_MESSAGES/application.po
+++ b/locale/cs_CZ/LC_MESSAGES/application.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-06 17:47+0100\n"
-"PO-Revision-Date: 2020-02-04 18:11+0100\n"
+"POT-Creation-Date: 2020-02-12 14:36+0100\n"
+"PO-Revision-Date: 2020-02-12 14:41+0100\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: cs_CZ\n"
@@ -16,6 +16,9 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.8.7.1\n"
+
+msgid "Nahoru"
+msgstr "Nahoru"
 
 msgid "Zpráva z obchodu %1"
 msgstr "Zpráva z obchodu %1"
@@ -531,7 +534,7 @@ msgid "Sledujte nás na&nbsp;Facebooku:"
 msgstr "Sledujte nás na&nbsp;Facebooku:"
 
 msgid "Obchodní podmínky"
-msgstr ""
+msgstr "Obchodní podmínky"
 
 msgid ""
 "Hello,\n"
