--- a/locale/cs_CZ/LC_MESSAGES/application.po
+++ b/locale/cs_CZ/LC_MESSAGES/application.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-12 14:36+0100\n"
-"PO-Revision-Date: 2020-02-12 14:41+0100\n"
+"POT-Creation-Date: 2020-02-15 19:19+0100\n"
+"PO-Revision-Date: 2020-02-15 19:20+0100\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: cs_CZ\n"
@@ -744,6 +744,9 @@ msgstr "Není skladem"
 
 msgid "In stock"
 msgstr "Skladem"
+
+msgid "In stock > %1 %2"
+msgstr "Skladem > %1 %2"
 
 msgid "In stock %1 %2"
 msgstr "Skladem %1 %2"
