--- a/locale/cs_CZ/LC_MESSAGES/application_admin.po
+++ b/locale/cs_CZ/LC_MESSAGES/application_admin.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-09 12:36+0100\n"
-"PO-Revision-Date: 2020-03-09 12:40+0100\n"
+"POT-Creation-Date: 2020-03-16 10:16+0100\n"
+"PO-Revision-Date: 2020-03-16 10:19+0100\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: cs_CZ\n"
@@ -649,6 +649,9 @@ msgstr "URL"
 
 msgid "bez popisu"
 msgstr "bez popisu"
+
+msgid "Drag files here"
+msgstr "Přetáhněte soubory sem"
 
 msgid "Photos"
 msgstr "Fotografie"
