--- a/locale/en_US/LC_MESSAGES/application.po
+++ b/locale/en_US/LC_MESSAGES/application.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-27 10:15+0200\n"
-"PO-Revision-Date: 2020-07-27 13:40+0200\n"
+"POT-Creation-Date: 2020-07-30 15:09+0200\n"
+"PO-Revision-Date: 2020-07-30 15:17+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 msgid "Nahoru"
 msgstr "Top"
@@ -240,6 +240,9 @@ msgstr "This product is sold out"
 
 msgid "Related products"
 msgstr "Related products"
+
+msgid "Je nám líto, ale prodej již skončil."
+msgstr "We apologize, but the sale is already over."
 
 msgid "Products"
 msgstr "Products"
@@ -501,16 +504,16 @@ msgid "Vaše objednávka č. %1 byla zrušena."
 msgstr "Your order No. %1 has been cancelled."
 
 msgid "Vaše objednávka s označením %1 byla úspěšně doručena."
-msgstr ""
+msgstr "Your order No. %1 has been successfully delivered."
 
 msgid "Vaše objednávka s označením %1 byla úspěšně dokončena."
-msgstr ""
+msgstr "Your order No. %1 has been successfully completed."
 
 msgid "Platba za objednávku s označením %1 byla úspěšně přijata."
-msgstr ""
+msgstr "Payment for order No. %1 has been successfully accepted."
 
 msgid "Platba za objednávku s označením %1 selhala."
-msgstr ""
+msgstr "Payment for order No. %1 failed."
 
 msgid "Začali jsme zpracovávat Vaší objednávku %1."
 msgstr "We have started processing your order %1."
